--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
                 <h2>工作經驗</h2>
                 <ul>
                     <li>
-                        <h3>助理產品經理</h3>
+                        <h3>產品副經</h3>
                         <p>Bemis Associates | 2022年10月 - 現在</p>
-                        <p>管理一個擁有四個產品線的中國品牌，每年創造200萬美元的營收。設計產品供應規則、定價策略和產品選擇指南。</p>
+                        <p>管理一個擁有四個產品線的中國品牌，每年創造1千萬美元的營收。設計產品定位、定價策略和產品選擇指南。</p>
                     </li>
                     <li>
                         <h3>流程與專案工程師</h3>
