--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <h2>工作經驗</h2>
                 <ul>
                     <li>
-                        <h3>產品副經</h3>
+                        <h3>產品副理</h3>
                         <p>Bemis Associates | 2022年10月 - 現在</p>
                         <p>管理一個擁有四個產品線的中國品牌，每年創造1千萬美元的營收。設計產品定位、定價策略和產品選擇指南。</p>
                     </li>
